--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <head>
   <meta charset="UTF-8">
   <title>MY APP</title>
+
 </head>
 <body>
   May Node and Express be with you.
+  <form action="/quotes" method="POST">
+  <input type="text" placeholder="name" name="name">
+  <input type="text" placeholder="quote" name="quote">
+  <button type="submit">Submit</button>
+</form>
 </body>
 </html>
